<resources>
    <string name="app_name">Find daMatch</string>
    <string name="title_credits_activity">Credits</string>
    <string name="title_help_activity">Help</string>
    <string name="title_high_scores_activity">High Scores</string>
    <string name="title_main_menu_activity">Main Menu</string>
    <string name="title_options_activity">Options</string>
    <string name="title_photo_gallery_activity">Flickr Photo Gallery</string>
    <string name="title_flickr_imageset_editor">Flickr Image Set Editor</string>
    <string name="btn_high_scores">High Scores</string>
    <string name="btn_high_scores_clear">Reset This High Scores List</string>
    <string name="btn_main_menu">Skip</string>
    <string name="btn_return_after_win">Hooray!</string>
    <string name="btn_view_credits">View Credits</string>
    <string name="txt_placeholder_score">Score goes here</string>
    <string name="txt_help_Description_Title">How To Play</string>
    <string name="txt_help_description">Timed Solo Deck Mode\n\nIn the \"Timed Solo Deck\" mode, any pair of cards
        in the deck will have exactly one image in common. Your task is to find the matching image on the draw card (bottom)
        as fast as possible.\n\nTo select an image, tap that image on the card.\n\nIf you\'ve tapped the matching
        image on the draw card, good job! The game will then advance by moving the draw pile card to the discard pile and
        then revealing a new card in the draw pile. The game will continue until no cards are left.\n\nIf
        you\'re quick, you just might get a high score!
        \n\nWords and Images Mode
        \n\nThe \"Words and Images\" mode plays like \"Timed Solo Deck\", but pictures may be
        replaced by a word describing them. Each card will have at least one word and last least one image. Any cards with words
        replacing pictures will remain with the same words throughout the game. Note that in order to find a match between two cards
        you may have to match two pictures, two words, or a picture and its associated word!
        \n\nCustom Image Functionality
        \n\nNote that you can select "Custom" as an image set! With this, you can search through Flickr\'s online database to download pictures for the game
        by clicking on the \"+\" button on the top right! You can select from the
        already shown images by clicking on them to download them, or you can use the magnifying glass to trying searching up photos associated with
        what you type in the nearby search bar! You can also select the picture icon beside the \"+\" to add other, local photos which have been stored in your
        device to the deck via the Matisse interface.
        \n\nAfter selecting your photos from Flickr or your device, you will see your collection of downloaded photos.
        Click on any of them to remove them from your set. You can also undo this by tapping on the image (which would now be represented by a placeholder image)!
        \n\nDifficulty Settings
        \n\nYou can change the difficulty to Easy, Medium and Hard to change the way the images (and words for them, if any) look in-game!
        \nEasy: Images/words are right-way-up and all the same size
        \nNormal: Images/words in both decks may be rotated a random amount of degrees; a match between two decks can have a different rotation in both!
        \nHard: Images/words may rotate like in the Normal difficulty, but may now also appear bigger or smaller than their sizes in the two other diifculties.
        \n\nNote that no matter the difficulty, the appearance of images/words on a particular card will stay the same even if the card is moved from the draw
        pile to the discard pile!
        \n\nExporting cards based on deck settings
        \n\nTap on the "Generate Deck Photos" button in the Options to generate a collection of photos based on your current choices in the Options, with each
        photo representing an individual card as it would appear in-game! You will need to grant permissions to allow the app to store this in your phone\'s
        Picture folder!
    </string>
    <string name="txt_heading_tips">Tips</string>
    <string name="txt_body_tips">Tip #1: To change your player name so that it shows up in your next
        high score, go to the Options screen and enter your name into the entry box.\n\nTip #2: For some visual
        variety, head to the Options screen where you can change the deck theme. This will change which images will appear on cards in future games.
    </string>
    <string name="txt_scroll_advice">(You can scroll through the help description above!)</string>
    <string name="txt_game_title_main_menu">Find daMatch\nMain Menu</string>
    <string name="txt_play">Play!</string>
    <string name="txt_help">Help</string>
    <string name="txt_options">Options</string>
    <string name="btn_flickr_photo_gallery">Flickr Photo Gallery</string>
    <string name="txt_authors">CMPT 276 Summer 2020 Project (Iteration 3) By Group Eleven:\nBenjamin Howard\nWilliam Horvath\nYuyang Li\nMichael Mora</string>
    <string name="txt_game_title_splash_screen">Find daMatch</string>
    <string name="txt_content_drawimage_1">An image for the first button in the draw pile.</string>
    <string name="txt_content_drawimage_2">An image for the second button in the draw pile.</string>
    <string name="txt_content_drawimage_3">An image for the third button in the draw pile.</string>
    <string name="txt_content_discardimage_1">An image for the first button in the discard pile.</string>
    <string name="txt_content_discardimage_2">An image for the second button in the discard pile.</string>
    <string name="txt_content_discardimage_3">An image for the third button in the discard pile.</string>
    <string name="tag_btn_key">A tag for the button to know which pile it is in.</string>
    <string name="tag_btn_bg">A tag for the button to set the default background.</string>
    <string name="txt_discard_pile">Discard Pile</string>
    <string name="txt_draw_pile">Draw Pile</string>
    <string name="txt_cards_remaining">Matches remaining: \u0020</string>
    <string name="magnifying_glass_splash_screen">MagnifyingGlassSplashScreen</string>
    <string name="txt_high_scores">HIGH SCORES</string>
    <string name="txt_first_rank">st:\u0020</string>
    <string name="txt_second_rank">nd:\u0020</string>
    <string name="txt_third_rank">rd:\u0020</string>
    <string name="txt_below_top_three_rank">th:\u0020</string>
    <string name="txt_player_place">\nYou earned rank %d on the leaderboard!</string>
    <string name="txt_credits_app_icon">App Icon</string>
    <string name="txt_prompt_order">Select Order:</string>
    <string name="txt_prompt_pile_size">Select draw pile size:</string>
    <string name="txt_selected_order">Selected Order: %d</string>
    <string name="txt_selected_pile_size">Selected Draw Pile Size: %d</string>
    <string name="txt_landscape_cave_source"><a href="https://quench.me/wp-content/uploads/2017/01/chalk-in-champagne.jpg">Cave</a></string>
    <string name="txt_landscape_desert_source"><a href="https://static.trulia-cdn.com/pictures/thumbs_5/zillowstatic/ISjv7m0b6f7jm90000000000.jpg">Desert</a></string>
    <string name="txt_landscape_forest_source"><a href="https://images.unsplash.com/photo-1516637236287-2de3d0ce59af?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;w=1000&amp;q=80">Forest</a></string>
    <string name="txt_landscape_ocean_source"><a href="https://caregiver.com/downloads/344/download/12478922_Ocean.jpg?cb=70f1866175a1f9b5192f1bb4f5efea8d&amp;w=1200">Ocean</a></string>
    <string name="txt_landscape_storm_source"><a href="https://friscostyle.com/wp-content/uploads/2019/10/4-22-15-Floydada-Texas-Supercell-Sunset-IG.jpg">Storm</a></string>
    <string name="txt_landscape_sunrise_source"><a href="https://freecampsites.net/wp-content/uploads/2017/07/DSC07985-Pano.jpg">Sunrise</a></string>
    <string name="txt_landscape_volcano_source"><a href="https://www.spain-tenerife.com/hotelbeatrizatlantis/images/stories/rotator/location/location03.jpg">Volcano</a></string>
    <string name="txt_landscape_rainbow_source"><a href="https://images.genius.com/dec0f72f076ee60a9b5978a1458dcd2b.1000x1000x1.jpg">Rainbow</a></string>
    <string name="txt_predator_bear_source"><a href="https://www.endextinction.org/sites/default/files/2019-09/two-polar-bears.jpg">Bear</a></string>
    <string name="txt_predator_eagle_source"><a href="https://www.sidneysailing.com/wp-content/uploads/2016/04/Pender-Island-sailing-package-bald-eagle.jpg">Eagle</a></string>
    <string name="txt_predator_leopard_source"><a href="https://img.fotocommunity.com/how-stupid-b2f68778-5067-4615-bdff-c350e72723d5.jpg?width=1000">Leopard</a></string>
    <string name="txt_predator_lion_source"><a href="https://media.ellerstrand.se/2011/05/Lion06.jpg">Lion</a></string>
    <string name="txt_predator_shark_source"><a href="https://www.diving-in-thailand.net/wp-content/uploads/2018/06/inst-9.jpg">Shark</a></string>
    <string name="txt_predator_snake_source"><a href="https://www.ogdoo.gr/media/k2/items/cache/35c71a0669ce4fc7ae0b49e6dea2c8ac_L.jpg">Snake</a></string>
    <string name="txt_predator_spider_source"><a href="https://2.bp.blogspot.com/-ITIGEfh8Kp8/WcSnZLIpHhI/AAAAAAAAl9I/v7Or93zpixwQ_vziY4ZNp4SW93SCrn1_QCLcBGAs/s1600/pensthorpe21-09-003.jpg">Spider</a></string>
    <string name="txt_predator_orca_source"><a href="https://i.pinimg.com/originals/96/67/40/966740a739e3638b21b2fad92198c4e4.jpg">Orca</a></string>
    <string name="txt_app_icon_source"><a href="https://www.easyicon.net/language.en/1161600-Magnifying_Glass_icon.html">App Icon</a></string>
    <string name="txt_heading_about_the_team">About the Team</string>
    <string name="txt_heading_image_sources">Image Sources</string>
    <string name="txt_heading_landscapes">Landscapes</string>
    <string name="txt_heading_predators">Predators</string>
    <string name="txt_body_about_the_team">The team who made this game consists of Yuyang Li, William Horvath, Michael Mora, and Benjamin Howard. The game was made as a school project for a software engineering course at Simon Fraser University.\n\nImages listed directly below do not belong to the team. Tap a link to go to the source of the image.</string>
    <string name="txt_win_message">You won! Your final score is: %s</string>
    <string name="img_cave_or_bear">img_cave_or_bear</string>
    <string name="img_volcano_spider">img_volcano_spider</string>
    <string name="img_ocean_or_lion">img_ocean_or_lion</string>
    <string name="img_desert_or_eagle">img_desert_or_eagle</string>
    <string name="img_forest_or_leopard">img_forest_or_leopard</string>
    <string name="img_storm_or_shark">img_storm_or_shark</string>
    <string name="img_sunrise_or_snake">img_sunrise_or_snake</string>
    <string name="txt_prompt_image_type">Select the type of pictures:</string>
    <string name="txt_prompt_name">Enter your name for high scores:</string>
    <string name="txt_player_name_placeholder">[Your name]</string>
    <string name="txt_score_by">\u0020by\u0020</string>
    <string name="txt_score_on">\u0020on\u0020</string>
    <string name="start_polling">Start polling</string>
    <string name="clear_search">Clear Search</string>
    <string name="search">Search</string>
    <string name="txt_toast_downloaded">%s has been downloaded.</string>
    <string name="txt_toast_deleted">%s has been deleted.</string>
    <string name="txt_words_and_images"><![CDATA[Words & Images Mode?]]></string>
    <string name="txt_manage_flick_photos">Flickr Photos</string>
    <string name="txt_flickr_photo_amount_ok">(%d photos)</string>
    <string name="txt_flickr_photo_amount_not_ok">(%1$d photos. need >= %2$d photos for Flickr set)</string>
    <string name="txt_flickr_photo_not_set">(Select Flickr Image Set to set/see photo count)</string>
</resources>