<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.MainMenuActivity">


    <Button
        android:id="@+id/btnOpenHighScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@color/green"
        android:fontFamily="sans-serif"
        android:text="@string/btn_high_scores"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/img_desert_or_eagle"
        app:layout_constraintStart_toEndOf="@+id/img_cave_or_bear"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

    <TextView
        android:id="@+id/gameTitleMainMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_game_title_main_menu"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorGreenFilter"
        android:fontFamily="sans-serif"
        android:text="@string/txt_play"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitleMainMenu" />

    <Button
        android:id="@+id/btnOpenHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="sans-serif"
        android:text="@string/txt_help"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenHighScores" />

    <Button
        android:id="@+id/btnOpenOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="sans-serif"
        android:text="@string/txt_options"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/img_ocean_or_lion"
        app:layout_constraintStart_toEndOf="@+id/img_forest_or_leopard"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenHelp" />

    <ImageView
        android:id="@+id/img_cave_or_bear"
        android:layout_width="118dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/img_cave_or_bear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitleMainMenu"
        app:srcCompat="@drawable/landscape_cave" />

    <ImageView
        android:id="@+id/img_volcano_spider"
        android:layout_width="118dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/img_volcano_spider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_ocean_or_lion"
        app:srcCompat="@drawable/landscape_volcano" />

    <ImageView
        android:id="@+id/img_ocean_or_lion"
        android:layout_width="118dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/img_ocean_or_lion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_desert_or_eagle"
        app:srcCompat="@drawable/landscape_ocean" />

    <ImageView
        android:id="@+id/img_desert_or_eagle"
        android:layout_width="118dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/img_desert_or_eagle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitleMainMenu"
        app:srcCompat="@drawable/landscape_desert" />

    <ImageView
        android:id="@+id/img_forest_or_leopard"
        android:layout_width="118dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/img_forest_or_leopard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_cave_or_bear"
        app:srcCompat="@drawable/landscape_forest" />

    <ImageView
        android:id="@+id/img_storm_or_shark"
        android:layout_width="118dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/img_storm_or_shark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_forest_or_leopard"
        app:srcCompat="@drawable/landscape_storm" />

</androidx.constraintlayout.widget.ConstraintLayout>